# term_dump

./: Cargo.toml  README.md
src/: main.rs
