[package]
name = "term_dump"
version = "0.1.0"
authors = ["Alexander Dimitrov <3321085+anchorite@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unibilium = { git = "https://github.com/anchorite/unibilium.git" }
clap = "~2"
